Fixed Dynamic arrays always having the length of the first matching element

Now the parent is searched first instead of starting at the highest level

BUG: 279398

svn path=/trunk/KDE/kdesdk/okteta/; revision=1246953