kasten/controllers/view/structures/datatypes/datainformation.h
@@ -181,6 +181,7 @@ public:
     virtual QScriptValue toScriptValue(QScriptEngine* engine, ScriptHandlerInfo* handlerInfo) = 0;
     void setParent(DataInformationBase* newParent);
     DataInformationBase* parent() const;
+    QPair<DataInformation*, QString> findChildForDynamicArrayLength(const QString& name, int upTo) const;
 protected:
     /**
      *  the offset of child number @p index compared to the beginning of the structure
